--- a/homeworks/CMakeLists.txt
+++ b/homeworks/CMakeLists.txt
@@ -4,5 +4,6 @@ add_subdirectory(04-vectors)
 add_subdirectory(04-vectors-test)
 add_subdirectory(05-classes) 
 add_subdirectory(05-classes-test)
+add_subdirectory(09-gui)
 add_subdirectory(exam-review)
 add_subdirectory(exam-review-test) 
