--- a/homeworks/CMakeLists.txt
+++ b/homeworks/CMakeLists.txt
@@ -7,4 +7,5 @@ add_subdirectory(05-classes-test)
 add_subdirectory(09-gui)
 add_subdirectory(11-graphics-clock)
 add_subdirectory(exam-review)
-add_subdirectory(exam-review-test) 
+add_subdirectory(exam-review-test)
+add_subdirectory(final-exam)
