exam-review-2 CMake Template

--- a/homeworks/CMakeLists.txt
+++ b/homeworks/CMakeLists.txt
@@ -8,4 +8,4 @@ add_subdirectory(09-gui)
 add_subdirectory(11-graphics-clock)
 add_subdirectory(exam-review)
 add_subdirectory(exam-review-test)
-add_subdirectory(final-exam)
+add_subdirectory(exam-review-2)
