--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ include_directories(homeworks/05-classes)
 include_directories(homeworks/09-gui)
 include_directories(homeworks/11-graphics-clock)
 include_directories(homeworks/exam-review)
-include_directories(homeworks/final-exam)
+include_directories(homeworks/exam-review-2)
 include_directories(assignments/05-classes)
 
 add_subdirectory(01-basics)
